fix overflow body

--- a/src/assets/globals.scss
+++ b/src/assets/globals.scss
@@ -10,6 +10,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-tap-highlight-color: transparent;
-  overflow-x: hidden;
+  overflow: hidden;
   touch-action: none;
 }
