--- a/src/components/screens/Start/Start.module.scss
+++ b/src/components/screens/Start/Start.module.scss
@@ -6,7 +6,7 @@
   }
 
   > .toggle {
-    @apply absolute top-6 left-16;
+    @apply absolute top-6 right-6;
   }
 
   > .friends {
